Recommended events updates.